Video preview in VSE shows a distorted and jagged appearance at scale 1:1 #38860

Closed
opened 2014-02-27 02:01:45 +01:00 by Lars Soderlind · 8 comments

System Information
Windows 7 64-bit, 16GB RAM, i7-4770 CPU using Intel HD Graphics 4600

Blender Version
Broken: blender-2.70-testbuild1-win64
Worked: unknown

Short description of error
Video preview in VSE shows a distorted and jagged appearance at scale 1:1

If I load a video in the Video Sequence Editor and set the dimensions to match the original file and then press Numpad 1 to show it at scale 1:1, the video shows a kind of jaggedness that I would only expect if it was poorly resized. You can also see what looks like the bottom row of pixels wrongly at the top of the video.

A way to fix this is to press Home to fit video in window, then press middle mouse button and move slightly, then press numpad 1. This makes it suddenly look correct for me. To make it look wrong again press Home, then Numpad 1.

By changing the size of the Blender program window by just one pixel you can find a size that makes it look correct. I see this bug with Blender full-screen at 1920x1200 resolution.

I attached a small video to use as a test.
VSE_test.mp4

Exact steps for others to reproduce the error
Open Blender.
Load Factory Settings.
Change Render resolution to x:480 y:270 100%.
Select Video Editing Layout.
Add - Movie - "VSE_test.mp4".
Select Show preview 1:1 (Numpad 1).
Video looks distorted (If not, try changing Blender program window size).

Select Fit preview in window (Home).
Press middle mouse button and move video a little.
Select Show preview 1:1 (Numpad 1).
Video looks correct. (At any window size).

Select Fit preview in window (Home).
Select Show preview 1:1 (Numpad 1).
Video looks distorted again.

**System Information** Windows 7 64-bit, 16GB RAM, i7-4770 CPU using Intel HD Graphics 4600 **Blender Version** Broken: blender-2.70-testbuild1-win64 Worked: unknown **Short description of error** Video preview in VSE shows a distorted and jagged appearance at scale 1:1 If I load a video in the Video Sequence Editor and set the dimensions to match the original file and then press Numpad 1 to show it at scale 1:1, the video shows a kind of jaggedness that I would only expect if it was poorly resized. You can also see what looks like the bottom row of pixels wrongly at the top of the video. A way to fix this is to press Home to fit video in window, then press middle mouse button and move slightly, then press numpad 1. This makes it suddenly look correct for me. To make it look wrong again press Home, then Numpad 1. By changing the size of the Blender program window by just one pixel you can find a size that makes it look correct. I see this bug with Blender full-screen at 1920x1200 resolution. I attached a small video to use as a test. [VSE_test.mp4](https://archive.blender.org/developer/F79074/VSE_test.mp4) **Exact steps for others to reproduce the error** Open Blender. Load Factory Settings. Change Render resolution to x:480 y:270 100%. Select Video Editing Layout. Add - Movie - "VSE_test.mp4". Select Show preview 1:1 (Numpad 1). Video looks distorted (If not, try changing Blender program window size). Select Fit preview in window (Home). Press middle mouse button and move video a little. Select Show preview 1:1 (Numpad 1). Video looks correct. (At any window size). Select Fit preview in window (Home). Select Show preview 1:1 (Numpad 1). Video looks distorted again.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @soderlind

Added subscriber: @soderlind
Sergey Sharybin self-assigned this 2014-02-27 09:42:26 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

This actually seems to be an issue with the intel card. Using GL_NEAREST filter results in the artifacts here. using GL_LINEAR makes things look smooth but it's not what you want when you're zoomed in.

@brecht, not sure how to solve this issue actually. One of ideas could be to use GL_LINEAR if zoom level is 1:1. but there might be some smarter solution which will always work?

This actually seems to be an issue with the intel card. Using GL_NEAREST filter results in the artifacts here. using GL_LINEAR makes things look smooth but it's not what you want when you're zoomed in. @brecht, not sure how to solve this issue actually. One of ideas could be to use GL_LINEAR if zoom level is 1:1. but there might be some smarter solution which will always work?

This issue was referenced by blender/blender-addons-contrib@467596dd36

This issue was referenced by blender/blender-addons-contrib@467596dd36f48c5779b094c2bfe74c322f19de3d

This issue was referenced by 467596dd36

This issue was referenced by 467596dd36f48c5779b094c2bfe74c322f19de3d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 467596dd36.

Closed by commit 467596dd36.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38860
No description provided.