Fix T38860: Video preview in VSE shows a distorted and jagged appearance at scale 1:1

Issue was cauzed by the set zoom ratio optator which didn't really set pixel zoom to 1:1.